--- a/app/src/app/movie-list/movie-list.component.html
+++ b/app/src/app/movie-list/movie-list.component.html
@@ -1,3 +1,12 @@
 <mat-grid-list cols="2" rowHeight="2:1">
     <mat-grid-tile>1</mat-grid-tile>
   </mat-grid-list>
+
+
+<ul class="movies">
+  <li *ngFor="let movie of movieArray">
+    <a routerLink="/detail/{{movie.id}}">
+      <span class="badge"></span> {{movie.name}}
+    </a>
+  </li>
+</ul>
