--- a/app/src/app/movie-details/movie-details.component.html
+++ b/app/src/app/movie-details/movie-details.component.html
@@ -1,10 +1,4 @@
 <div *ngIf="movie">
-
   <h2>{{movie.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{movie.id}}</div>
-  <div>
-    <label for="hero-name">Hero name: </label>
-    <input id="hero-name" [(ngModel)]="movie.name" placeholder="name">
-  </div>
-
+  <button type="button" (click)="goBack()">go back</button>
 </div>
