--- a/app/src/app/header/header.component.html
+++ b/app/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="primary">
     <span>Movies</span>
     <span class="example-spacer"></span>
-  </mat-toolbar>
+    <button type="button" (click)="openDialog()" class="example-icon" mat-raised-button color="primary">Add Movie</button>
+    </mat-toolbar>
