show movies list and delete movie

--- a/app/src/app/movie-details/movie-details.component.html
+++ b/app/src/app/movie-details/movie-details.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="movie">
   <h2>{{movie.name | uppercase}} Details</h2>
   <button type="button" (click)="goBack()">go back</button>
+  <button type="button" (click)="deleteMovie()">Delete Movie</button>
 </div>
