--- a/app/src/app/movie-list/movie-list.component.html
+++ b/app/src/app/movie-list/movie-list.component.html
@@ -4,7 +4,7 @@
       <ul class="movies">
         <li>
           <a routerLink="/detail/{{movie.id}}">
-            <span class="badge"></span> {{movie.name}}
+            <span class="badge"></span><h1 class="name">{{movie.name}}</h1> 
           </a>
         </li>
       </ul>
